changes made projects cards using grid flexbox and alignment problem solved and also ul lists used insted of hx and also divs in about section

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ html {
 .container {
   padding: 2.8rem;
   margin: 0 auto;
+  min-width: 37.5rem;
 }
 
 .navigation {
@@ -69,12 +70,19 @@ ul li {
   list-style: none;
 }
 
+.section-projects {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
 .project {
+  display: flex;
+  flex-direction: column;
   background: #fff;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
   margin-bottom: 9.6rem;
-  padding: 3.4rem;
+  padding: 1rem 1rem 2.4rem 1rem;
   box-shadow: 0 0 5px 1 rgba(0, 0, 0, 0.1);
 }
 
@@ -112,7 +120,7 @@ ul li {
 
 .programming-lang {
   display: flex;
-  gap: 2.4rem;
+  gap: 1rem;
   font-size: 1.2rem;
   font-weight: 500;
   line-height: 1.6rem;
@@ -121,26 +129,43 @@ ul li {
   color: #6070ff;
 }
 
-.programming-lang h5 {
+.programming-lang li {
   background: #ebebff;
   border-radius: 8px;
   padding: 0.4rem 1.2rem;
 }
 
 .btn {
-  display: inline-block;
   font-size: 1.7rem;
   font-weight: 500;
   background: #fff;
   border: 1px solid #396df2;
   border-radius: 16px;
-  padding: 1.6rem;
+  padding: 1rem;
   text-decoration: none;
   color: #396df2;
 }
 
+.btn:link {
+  color: #6070ff;
+  background: #fff;
+}
+
+.btn:hover {
+  background: #6070ff;
+  color: #fff;
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+  border-radius: 8px;
+  transition: all 0.9s;
+}
+
+.btn:active {
+  color: #6070ff;
+  background: #fff;
+}
+
 .project-btn {
-  display: inline-block;
+  margin-bottom: 1rem;
 }
 
 .section-about {
@@ -209,7 +234,7 @@ ul li {
   padding: 0.8rem 0 0.8rem 0.8rem;
 }
 
-.programming-skill span h5 {
+.programming-skill span li {
   font-size: 1.5rem;
   font-weight: 500;
   margin-left: 2rem;
@@ -222,7 +247,7 @@ ul li {
   margin: 3rem 0;
 }
 
-.frameworks-skills span h5 {
+.frameworks-skills span li {
   font-size: 2rem;
   font-weight: 500;
 }
